--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-streamlit==1.19.0
-nltk==3.8.1
-scikit-learn==1.2.0
-joblib==1.4.2
-distutils
-wheel
-setuptools>=63.0.0
-pip>=24.3.1
+numpy
+torch
+scikit-learn
+nltk
+streamlit
+sentence-transformers
